<resources>
    <string name="app_name">SmartLibrary</string>
    <string name="image_icon">Image Icon</string>
    <string name="book_title">Book title...</string>
    <string name="book_author">Book author...</string>
    <string name="book_type">Book type...</string>
    <string name="e_book_link">E-book link...</string>
    <string name="rfid_number">RFID number...</string>
    <string name="book_description">Book description...</string>
    <string name="upload">Upload</string>
    <string name="search_books">Search books</string>
    <string name="zero">0</string>
    <string name="pay_due_amount">pay due amount</string>
    <string name="logout">Logout</string>
    <string name="have_to_pay">have to pay</string>
    <string name="chocho">Chocho</string>
    <string name="ebook">Ebook</string>
    <string name="reserve">Reserve</string>
    <string name="about">About</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="alert">Alert</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full name…</string>
    <string name="phone_number">Phone number…</string>
    <string name="email_address">Email address…</string>
    <string name="password">Password…</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="bot_message">bot message</string>
    <string name="e_book">E-BOOK</string>
    <string name="your_message">your message</string>
    <string name="book_name">Book Name</string>
    <string name="nandakumar_b">Nandakumar B</string>
    <string name="books_reserved_5_borrowed_4">Books - Reserved : 5 | Borrowed : 4</string>
    <string name="text">Text</string>
    <string name="group_name">Group Name</string>
    <string name="please_wait">Please wait…!</string>
    <string name="smart_library">SMART LIBRARY</string>
    <string name="type_something">Type Something!</string>
    <string name="sign_in_to_library">Sign in to Smart Library</string>
    <string name="no_account">Don\'t have an account? Register</string>
</resources>