<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fillViewport="true">
<RelativeLayout
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/auth_pan"
	android:background="#ffffff">
	<ImageView
		android:id="@+id/auth_activityImageView"
		android:background="@drawable/ic_logo"
		android:layout_width="100dp"
		android:layout_height="100dp"
		android:layout_margin="10dp"
		android:contentDescription="@string/image_icon" />

	<TextView
		android:id="@+id/auth_activityTextView"
		android:layout_below="@+id/auth_activityImageView"
		android:layout_width="200dp"
		android:layout_height="wrap_content"
		android:textSize="23sp"
		android:lineSpacingExtra="5dp"
		android:textColor="#592C17"
		android:text="@string/create_a_new_account"
		android:layout_margin="15dp"/>

	<EditText
		android:id="@+id/et_name"
		android:layout_marginTop="25dp"
		android:drawableStart="@drawable/icon_person"
		android:layout_below="@+id/auth_activityTextView"
		android:layout_width="match_parent"
		android:inputType="textPersonName"
		android:layout_height="wrap_content"
		android:hint="@string/full_name"
		android:ems="10"
		style="@style/EditTextTheme"
		android:autofillHints="" />

	<EditText
		android:id="@+id/et_phone"
		android:drawableStart="@drawable/icon_phone"
		android:hint="@string/phone_number"
		android:layout_width="match_parent"
		android:inputType="phone"
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_below="@id/et_name"
		style="@style/EditTextTheme"
		android:autofillHints="" />

	<EditText
		android:id="@+id/et_mail"
		android:drawableStart="@drawable/icon_mail"
		android:hint="@string/email_address"
		android:layout_width="match_parent"
		android:inputType="textEmailAddress"
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_below="@id/et_phone"
		style="@style/EditTextTheme"
		android:autofillHints="" />

	<EditText
		android:id="@+id/et_password"
		android:drawableStart="@drawable/icon_password"
		android:hint="@string/password"
		android:layout_width="match_parent"
		android:inputType="textPassword"
		android:layout_height="wrap_content"
		android:ems="10"
		android:layout_below="@id/et_mail"
		style="@style/EditTextTheme"
		android:autofillHints="" />

	<Button
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:text="@string/create_account"
		android:textAllCaps="false"
		android:textColor="#ffffff"
		android:background="@drawable/sign_button_background"
		android:layout_margin="30dp"
		android:layout_centerInParent="true"
		android:layout_below="@id/et_password"
		android:id="@+id/btn_auth"/>

	<TextView
		android:id="@+id/txt_auth"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:text="@string/already_have_an_account_sign_in"
		android:layout_below="@id/btn_auth"
		android:clickable="true"
		android:padding="3dp"
		android:background="?android:attr/selectableItemBackground"
		android:layout_centerInParent="true"
		android:focusable="true" />

</RelativeLayout>
</ScrollView>
