<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:id="@+id/custom_userLinearLayout"
	android:orientation="horizontal"
	android:gravity="center_vertical"
	android:weightSum="5"
	android:padding="10dp"
	android:elevation="1dp"
	android:background="@drawable/card_background">

	<RelativeLayout
		android:layout_weight="1.3"
		android:layout_width="0dp"
		android:gravity="center"
		android:padding="10dp"
		android:layout_height="wrap_content">

		<TextView
			android:id="@+id/txt_user_id"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:visibility="gone"/>

		<TextView
			android:id="@+id/txt_user_price"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/zero"
			android:textColor="#ff0000"
			android:textSize="16sp"
			android:layout_marginBottom="5dp"
			android:scaleY="2.0"
			android:padding="5dp"/>

		<TextView
			android:id="@+id/txt_user_pay"
			android:text="@string/have_to_pay"
			android:textSize="11sp"
			android:gravity="center"
			android:lineSpacingExtra="5dp"
			android:textColor="#000080"
			android:layout_below="@+id/txt_user_price"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"/>

	</RelativeLayout>

	<LinearLayout
		android:layout_weight="3.7"
		android:orientation="vertical"
		android:layout_height="wrap_content"
		android:layout_width="0dp">

		<TextView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/nandakumar_b"
			android:textColor="#680D08"
			android:id="@+id/txt_user_name"
			android:padding="5dp"/>

		<TextView
			android:id="@+id/txt_user_info"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:text="@string/books_reserved_5_borrowed_4"
			android:padding="5dp"/>

	</LinearLayout>

</LinearLayout>

