<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="10dp">

	<LinearLayout
		android:id="@+id/chat_LinearLayout"
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:maxWidth="250dp"
		android:padding="10dp"
		android:orientation="vertical"
		android:background="@drawable/shape_left">

		<TextView
			android:layout_width="wrap_content"
			android:letterSpacing="0.04"
			android:padding="5dp"
			android:maxWidth="250dp"
			android:lineSpacingExtra="5dp"
			android:layout_height="wrap_content"
			android:text="@string/bot_message"
			android:textSize="12sp"
			android:textColor="#000080"
			android:id="@+id/txt_chat"/>

		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:orientation="horizontal">

			<Button
				android:id="@+id/chat_leftButton"
				android:layout_width="wrap_content"
				android:layout_height="30dp"
				android:textColor="#ffffff"
				android:text="@string/e_book"
				android:background="@drawable/solid_button_background"
				android:textSize="11sp"
				android:layout_margin="5dp"
				android:padding="5dp"
				style="?android:attr/buttonBarButtonStyle" />

			<Button
				android:id="@+id/chat_rightButton"
				android:layout_width="wrap_content"
				android:layout_height="30dp"
				android:text="@string/reserve"
				android:background="@drawable/border_button_background"
				android:textSize="11sp"
				android:layout_margin="5dp"
				android:padding="5dp"
				style="?android:attr/buttonBarButtonStyle" />

		</LinearLayout>

	</LinearLayout>

</LinearLayout>

